[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-Z", "threads=8"]

[profile.dev.build-override]
opt-level = 3

[dependencies]
anyhow = { version = "1.0.93" }
actix-cors = "0.7.0"
actix-web = "4"
dotenvy = "0.15.7"
intasend = "0.2.0"
libsql = "0.6.0"
rust_decimal = "1.36.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
